crates/flowscope-core/tests/snapshots/golden__golden_ctas_captures_target_columns.snap
---
source: crates/flowscope-core/tests/golden.rs
expression: cleaned
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "CREATE_TABLE_AS",
      "joinCount": 0,
      "complexityScore": 10
    }
  ],
  "nodes": [
    {
      "id": "column_073ed625e10d73f3",
      "type": "column",
      "label": "upper_name",
      "canonicalName": {
        "name": "upper_name"
      },
      "statementIds": [
        0
      ],
      "expression": "UPPER(name)",
      "metadata": {
        "data_type": "TEXT"
      }
    },
    {
      "id": "column_1fafa75822fcf49b",
      "type": "column",
      "label": "id",
      "qualifiedName": "users.id",
      "canonicalName": {
        "schema": "users",
        "name": "id"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_3cf9faa82a446690",
      "type": "column",
      "label": "name",
      "qualifiedName": "users.name",
      "canonicalName": {
        "schema": "users",
        "name": "name"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_8ebd316ab60e6446",
      "type": "column",
      "label": "id",
      "canonicalName": {
        "name": "id"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_10a0682dff76cdbc",
      "type": "table",
      "label": "users",
      "qualifiedName": "users",
      "canonicalName": {
        "name": "users"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_623e5f3551061424",
      "type": "table",
      "label": "tgt",
      "qualifiedName": "tgt",
      "canonicalName": {
        "name": "tgt"
      },
      "statementIds": [
        0
      ]
    }
  ],
  "edges": [
    {
      "id": "edge_3e6988845fc0ddf0",
      "from": "table_623e5f3551061424",
      "to": "column_8ebd316ab60e6446",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_44cc1d70df560fb4",
      "from": "table_10a0682dff76cdbc",
      "to": "table_623e5f3551061424",
      "type": "data_flow",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_720f152947fb0bd4",
      "from": "column_3cf9faa82a446690",
      "to": "column_073ed625e10d73f3",
      "type": "derivation",
      "expression": "UPPER(name)",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_a92e0d09881d5676",
      "from": "table_10a0682dff76cdbc",
      "to": "column_1fafa75822fcf49b",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_b867fc400d806570",
      "from": "table_623e5f3551061424",
      "to": "column_073ed625e10d73f3",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_ca4078f641aa8fdc",
      "from": "table_10a0682dff76cdbc",
      "to": "column_3cf9faa82a446690",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_f6501889408ccbfc",
      "from": "column_1fafa75822fcf49b",
      "to": "column_8ebd316ab60e6446",
      "type": "data_flow",
      "statementIds": [
        0
      ]
    }
  ],
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 2,
    "columnCount": 4,
    "joinCount": 0,
    "complexityScore": 10,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  },
  "resolvedSchema": {
    "tables": [
      {
        "name": "tgt",
        "columns": [
          {
            "name": "id",
            "origin": "implied"
          },
          {
            "name": "upper_name",
            "dataType": "TEXT",
            "origin": "implied"
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z"
      }
    ]
  }
}
