crates/flowscope-core/tests/snapshots/golden__golden_imported_precedence_over_create_table.snap
---
source: crates/flowscope-core/tests/golden.rs
expression: cleaned
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "CREATE_TABLE",
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "nodes": [
    {
      "id": "column_0e392201e6a91e55",
      "type": "column",
      "label": "imported_col",
      "qualifiedName": "products.imported_col",
      "canonicalName": {
        "schema": "products",
        "name": "imported_col"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_59f6b8bb067f6ec4",
      "type": "column",
      "label": "product_id",
      "qualifiedName": "products.product_id",
      "canonicalName": {
        "schema": "products",
        "name": "product_id"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_7253befe2c400508",
      "type": "table",
      "label": "products",
      "qualifiedName": "products",
      "canonicalName": {
        "name": "products"
      },
      "statementIds": [
        0
      ]
    }
  ],
  "edges": [
    {
      "id": "edge_482576f33e20c7f7",
      "from": "table_7253befe2c400508",
      "to": "column_0e392201e6a91e55",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_5c1c64b7a9ef59e5",
      "from": "table_7253befe2c400508",
      "to": "column_59f6b8bb067f6ec4",
      "type": "ownership",
      "statementIds": [
        0
      ]
    }
  ],
  "issues": [
    {
      "severity": "warning",
      "code": "SCHEMA_CONFLICT",
      "message": "DDL for 'products' conflicts with imported schema. Using imported schema (imported has 2 columns, DDL has 3 columns)",
      "statementIndex": 0
    }
  ],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 2,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 1,
      "infos": 0
    },
    "hasErrors": false
  },
  "resolvedSchema": {
    "tables": [
      {
        "name": "products",
        "columns": [
          {
            "name": "product_id",
            "dataType": "BIGINT",
            "origin": "imported"
          },
          {
            "name": "imported_col",
            "origin": "imported"
          }
        ],
        "origin": "imported",
        "updatedAt": "2024-01-01T00:00:00Z"
      }
    ]
  }
}
