crates/flowscope-core/tests/snapshots/golden__golden_window_functions_emit_columns.snap
---
source: crates/flowscope-core/tests/golden.rs
expression: cleaned
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "nodes": [
    {
      "id": "column_6ec44834a58586c3",
      "type": "column",
      "label": "rn",
      "canonicalName": {
        "name": "rn"
      },
      "statementIds": [
        0
      ],
      "expression": "ROW_NUMBER() OVER (PARTITION BY dept)",
      "metadata": {
        "data_type": "INTEGER"
      }
    },
    {
      "id": "column_8d19bd6c3446f90a",
      "type": "column",
      "label": "id",
      "qualifiedName": "employees.id",
      "canonicalName": {
        "schema": "employees",
        "name": "id"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_e38d78c338bac387",
      "type": "column",
      "label": "id",
      "canonicalName": {
        "name": "id"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "output_74d22f755ec62dbc",
      "type": "output",
      "label": "Output",
      "canonicalName": {
        "name": "Output"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_1d63721b3610a67f",
      "type": "table",
      "label": "employees",
      "qualifiedName": "employees",
      "canonicalName": {
        "name": "employees"
      },
      "statementIds": [
        0
      ]
    }
  ],
  "edges": [
    {
      "id": "edge_6c68e46f48c0b91f",
      "from": "table_1d63721b3610a67f",
      "to": "column_6ec44834a58586c3",
      "type": "derivation",
      "expression": "ROW_NUMBER() OVER (PARTITION BY dept)",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_7549f71a6ce9a0e6",
      "from": "output_74d22f755ec62dbc",
      "to": "column_6ec44834a58586c3",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_9b5441461589fa16",
      "from": "output_74d22f755ec62dbc",
      "to": "column_e38d78c338bac387",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_d0d8e0de8ab72937",
      "from": "table_1d63721b3610a67f",
      "to": "column_8d19bd6c3446f90a",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_f9fc4f5f2cbb3f46",
      "from": "column_8d19bd6c3446f90a",
      "to": "column_e38d78c338bac387",
      "type": "data_flow",
      "statementIds": [
        0
      ]
    }
  ],
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 3,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  }
}
