crates/flowscope-core/tests/snapshots/golden__imported_schema_resolves_via_search_path_with_catalog.snap
---
source: crates/flowscope-core/tests/golden.rs
expression: cleaned
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "nodes": [
    {
      "id": "column_431258e4507321e5",
      "type": "column",
      "label": "amount",
      "qualifiedName": "sales.analytics.reports.amount",
      "canonicalName": {
        "name": "sales.analytics.reports.amount"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_5d649ea55ab526b5",
      "type": "column",
      "label": "amount",
      "canonicalName": {
        "name": "amount"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "output_74d22f755ec62dbc",
      "type": "output",
      "label": "Output",
      "canonicalName": {
        "name": "Output"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_b6822030e61daaf4",
      "type": "table",
      "label": "reports",
      "qualifiedName": "sales.analytics.reports",
      "canonicalName": {
        "catalog": "sales",
        "schema": "analytics",
        "name": "reports"
      },
      "statementIds": [
        0
      ],
      "resolutionSource": "imported"
    }
  ],
  "edges": [
    {
      "id": "edge_122ec0ec87f112d1",
      "from": "column_431258e4507321e5",
      "to": "column_5d649ea55ab526b5",
      "type": "data_flow",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_53109492fbd471a4",
      "from": "table_b6822030e61daaf4",
      "to": "column_431258e4507321e5",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_e758a5bc5d93f3d3",
      "from": "output_74d22f755ec62dbc",
      "to": "column_5d649ea55ab526b5",
      "type": "ownership",
      "statementIds": [
        0
      ]
    }
  ],
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 2,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  },
  "resolvedSchema": {
    "tables": [
      {
        "catalog": "sales",
        "schema": "analytics",
        "name": "reports",
        "columns": [
          {
            "name": "amount",
            "origin": "imported"
          }
        ],
        "origin": "imported",
        "updatedAt": "2024-01-01T00:00:00Z"
      }
    ]
  }
}
